...
    @Binding var filter: TaskFilter

    var body: some View {
        Button {
            isPresentingForm = true
        } label: {
            Label("Add Task", systemImage: "plus")
        }
        .sheet(isPresented: $isPresentingForm) {
            TaskFormView(viewModel: TaskDetailViewModel(context: context, task: nil, preselectedFilter: filter))
        }
    }
}
...
